--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,18 @@ services:
     ports:
       - '5432:5432'
     restart: unless-stopped
+  auth:
+    image: quay.io/keycloak/keycloak
+    ports:
+      - "8080:8080"
+    environment:
+      KEYCLOAK_ADMIN: admin 
+      KEYCLOAK_ADMIN_PASSWORD: admin
+    command: 
+      - start-dev 
+      - --import-realm
+    volumes:
+      - /home/keycloak/realm.json:/opt/keycloak/data/import/realm.json
   daas_server:
     build: .
     image: daas_server:latest
@@ -28,4 +40,4 @@ services:
     container_name: daas_srv_backend
     depends_on:
       - psql
-      
+      - auth
