--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ djangorestframework==3.14.0
 idna==3.4
 packaging==23.1
 python-dotenv==1.0.0
+psycopg2-binary
 pytz==2023.3
 requests==2.31.0
 sqlparse==0.4.4
