--- a/.env.sample
+++ b/.env.sample
@@ -1,6 +1,8 @@
-DAAS_POSTGRES_NAME=postgres
-DAAS_POSTGRES_HOST=localhost
-DAAS_POSTGRES_PORT=5432
-DAAS_POSTGRES_USER=postgres
-DAAS_POSTGRES_PASSWORD=postgres
-DAAS_MODE=production
+DAAS_POSTGRES_NAME=
+DAAS_POSTGRES_HOST=
+DAAS_POSTGRES_PORT=
+DAAS_POSTGRES_USER=
+DAAS_POSTGRES_PASSWORD=
+DAAS_MODE=
+CELERY_PERIODIC_TASK_TIME=
+CELERY_BROKER_URL=
