--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,7 +10,7 @@
             "request": "launch",
             "program": "${workspaceFolder}/manage.py",
             "args": [
-                "run_app"
+                "runserver","0.0.0.0:8000"
             ],
             "django": true,
             "justMyCode": true
