--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,8 @@ django-filter==23.2
 django-timezone-field==6.0.1
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.3.0
+gunicorn==21.2.0
+h11==0.14.0
 idna==3.4
 kombu==5.3.2
 packaging==23.1
@@ -37,6 +39,7 @@ sqlparse==0.4.4
 typing-extensions==4.7.1
 tzdata==2023.3
 urllib3==2.0.4
+uvicorn==0.23.2
 vine==5.0.0
 wcwidth==0.2.8
 websocket-client==1.6.2
