clean docker compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
       - POSTGRES_DB=postgres
     ports:
       - '5432:5432'
-    restart: unless-stopped
+    restart: always
   auth:
     image: quay.io/keycloak/keycloak
     ports:
@@ -23,24 +23,7 @@ services:
       - --import-realm
     volumes:
       - /home/keycloak/realm.json:/opt/keycloak/data/import/realm.json
-  # daas_server:
-  #   build: .
-  #   image: daas_server:latest
-  #   restart: always
-  #   environment:
-  #     - DAAS_POSTGRES_NAME=postgres
-  #     - DAAS_POSTGRES_HOST=psql
-  #     - DAAS_POSTGRES_PORT=5432
-  #     - DAAS_POSTGRES_USER=postgres
-  #     - DAAS_POSTGRES_PASSWORD=postgres
-  #     - DAAS_MODE=production
-  #   ports:
-  #     - "8000:8000"  
-  #   command: bash -c "make run"
-  #   container_name: daas_srv_backend
-  #   depends_on:
-  #     - psql
-  #     - auth
+    restart: always
   cache:
     image: redis:6.2-alpine
     restart: always
