add privilage management feature

--- a/.env.sample
+++ b/.env.sample
@@ -1,9 +1,10 @@
-DAAS_POSTGRES_NAME=
-DAAS_POSTGRES_HOST=
-DAAS_POSTGRES_PORT=
-DAAS_POSTGRES_USER=
-DAAS_POSTGRES_PASSWORD=
-DAAS_MODE=
-CELERY_PERIODIC_TASK_TIME=
-CELERY_BROKER_URL=
-CELERY_RESULT_BACKEND=
+DAAS_POSTGRES_NAME= #postgres
+DAAS_POSTGRES_HOST= #localhost
+DAAS_POSTGRES_PORT= #5432
+DAAS_POSTGRES_USER= #postgres
+DAAS_POSTGRES_PASSWORD= #postgres
+DAAS_FORCE_CREDENTIAL= #True or False
+DAAS_MODE= #production or development
+CELERY_PERIODIC_TASK_TIME= #60 for each one minute
+CELERY_BROKER_URL= #redis://localhost:6379/0
+CELERY_RESULT_BACKEND= #redis://localhost:6379/0
