--- a/.env.sample
+++ b/.env.sample
@@ -8,3 +8,5 @@ DAAS_MODE= #production or development
 CELERY_PERIODIC_TASK_TIME= #60 for each one minute
 CELERY_BROKER_URL= #redis://localhost:6379/0
 CELERY_RESULT_BACKEND= #redis://localhost:6379/0
+FILE_SERVER_HOST= #http://localhost:8001
+MANEGER_HOST= #http://localhost:8000
