--- a/requirements.txt
+++ b/requirements.txt
@@ -32,6 +32,7 @@ python-crontab==3.0.0
 python-dateutil==2.8.2
 python-dotenv==1.0.0
 pytz==2023.3
+PyYAML==6.0.1
 redis==5.0.1
 requests==2.31.0
 six==1.16.0
