--- a/.env.sample
+++ b/.env.sample
@@ -10,3 +10,5 @@ CELERY_BROKER_URL= #redis://localhost:6379/0
 CELERY_RESULT_BACKEND= #redis://localhost:6379/0
 FILE_SERVER_HOST= #http://localhost:8001
 MANEGER_HOST= #http://localhost:8000
+DAAS_DOCKER_IMAGE= #netpardaz/netsep
+DAAS_IMAGE_VERSION= #BaseImage
