--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,9 @@ services:
       - CELERY_RESULT_BACKEND=redis://192.168.2.21:6379/0
       - FILE_SERVER_HOST=http://192.168.2.20:8001
       - MANEGER_HOST=http://192.168.2.21:8000
+      -  DAAS_DOCKER_IMAGE=netpardaz/netsep
+      -  DAAS_IMAGE_VERSION=BaseImage
+
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
     devices:
