--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,8 @@ django-filter==23.2
 django-timezone-field==6.0.1
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.3.0
+docker==6.1.3
+drf-writable-nested==0.7.0
 gunicorn==21.2.0
 h11==0.14.0
 idna==3.4
