--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,20 +3,20 @@ services:
   daas:
     build: .
     environment:
-      - DAAS_POSTGRES_NAME=postgres
-      - DAAS_POSTGRES_HOST=192.168.2.21
+      - DAAS_POSTGRES_NAME=netsep
+      - DAAS_POSTGRES_HOST=192.168.200.2
       - DAAS_POSTGRES_PORT=5432
       - DAAS_POSTGRES_USER=postgres
       - DAAS_POSTGRES_PASSWORD=postgres
       - DAAS_FORCE_CREDENTIAL=True
       - DAAS_MODE=production
       - CELERY_PERIODIC_TASK_TIME=60
-      - CELERY_BROKER_URL=redis://192.168.2.21:6379/0
-      - CELERY_RESULT_BACKEND=redis://192.168.2.21:6379/0
-      - FILE_SERVER_HOST=http://192.168.2.20:8001
-      - MANEGER_HOST=http://192.168.2.21:8000
-      -  DAAS_DOCKER_IMAGE=netpardaz/netsep
-      -  DAAS_IMAGE_VERSION=BaseImage
+      - CELERY_BROKER_URL=redis://192.168.200.2:6379/0
+      - CELERY_RESULT_BACKEND=redis://192.168.200.2:6379/0
+      - FILE_SERVER_HOST=http://192.168.200.2:8001
+      - MANEGER_HOST=http://192.168.200.2:8000
+      - DAAS_DOCKER_IMAGE=netpardaz/netsep
+      - DAAS_IMAGE_VERSION=1.0.0
 
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
@@ -33,7 +33,7 @@ services:
     environment:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
-      - POSTGRES_DB=postgres
+      - POSTGRES_DB=netsep
     ports:
       - '5432:5432'
     restart: always
@@ -44,13 +44,6 @@ services:
     environment:
       - KEYCLOAK_ADMIN=admin 
       - KEYCLOAK_ADMIN_PASSWORD=admin
-      - KEYCLOAK_FRONTEND_URL=https://keycloak.npd-co.com/
-      - PROXY_ADDRESS_FORWARDING=true
-      - KC_HOSTNAME=https://keycloak.npd-co.com/
-      - KC_HTTP_ENABLED=true
-      - KC_HOSTNAME_STRICT=false
-      - KC_HOSTNAME_STRICT_HTTPS=false
-      - KC_HTTP_PORT=8080
     command: 
       - start-dev 
       - --import-realm
