--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,9 @@ services:
       - FILE_SERVER_HOST=http://192.168.200.2:8001
       - MANEGER_HOST=http://192.168.200.2:8000
       - DAAS_DOCKER_IMAGE=netpardaz/netsep
-      - DAAS_IMAGE_VERSION=1.0.0
+      - DAAS_IMAGE_VERSION=1.0.8proxy
+      - DAAS_START_PORT=30000
+      - DAAS_END_PORT=31000
 
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
