--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
       - MANEGER_HOST=http://192.168.200.2:8000
       - DAAS_DOCKER_IMAGE=netpardaz/netsep
       - HAS_LOG_SERVER=True
-      - DAAS_IMAGE_VERSION=1.0.8proxy
+      - DAAS_IMAGE_VERSION=1.1.1update
       - DAAS_START_PORT=30000
       - DAAS_END_PORT=31000
 
