--- a/.env.sample
+++ b/.env.sample
@@ -12,3 +12,9 @@ FILE_SERVER_HOST= #http://localhost:8001
 MANEGER_HOST= #http://localhost:8000
 DAAS_DOCKER_IMAGE= #netpardaz/netsep
 DAAS_IMAGE_VERSION= #BaseImage
+HAS_LOG_SERVER= #false
+LOG_SERVER_IP= #192.168.1.134
+LOG_SERVER_PORT= #514
+TIME_ZONE= #Asia/Tehran
+FORBIDDEN_IP_RANGES= #192.168.0.0/16,
+FILE_SERVER_DOCKER_IP= #172.16.0.1
