--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       - DAAS_POSTGRES_PORT=5432
       - DAAS_POSTGRES_USER=postgres
       - DAAS_POSTGRES_PASSWORD=postgres
-      - DAAS_FORCE_CREDENTIAL=True
+      - DAAS_FORCE_CREDENTIAL=true
       - DAAS_MODE=production
       - CELERY_PERIODIC_TASK_TIME=60
       - CELERY_BROKER_URL=redis://192.168.200.2:6379/0
@@ -16,15 +16,18 @@ services:
       - FILE_SERVER_HOST=http://192.168.200.2:8001
       - MANEGER_HOST=http://192.168.200.2:8000
       - DAAS_DOCKER_IMAGE=netpardaz/netsep
-      - HAS_LOG_SERVER=True
-      - DAAS_IMAGE_VERSION=1.1.1update
+      - HAS_LOG_SERVER=false
+      - DAAS_IMAGE_VERSION=1.1.2local
       - DAAS_START_PORT=30000
       - DAAS_END_PORT=31000
       - FORBIDDEN_IP_RANGES=192.168.0.0/16,
       - FILE_SERVER_DOCKER_IP=172.16.1.2
+      - RECORD_SH_PATH=/home/netpardaz/Desktop/projects/netpardaz/daas_backend/daas_backend/scripts/record.sh
+      - RECORD_MOUNT_HOST_PATH=/home/netpardaz/jvd/
 
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
+      - /home/mohammadjavad/Videos/:/app/streams/
     devices:
       - dev/dri:/dev/dri
     ports:
