--- a/requirements.txt
+++ b/requirements.txt
@@ -27,7 +27,7 @@ kombu==5.3.2
 packaging==23.1
 persiantools==3.0.1
 prompt-toolkit==3.0.39
-psycopg2==2.9.7
+# psycopg2==2.9.7
 psycopg2-binary==2.9.7
 PyJWT==2.8.0
 python-crontab==3.0.0
